--- a/src/scss/variables/theme.scss
+++ b/src/scss/variables/theme.scss
@@ -108,6 +108,7 @@ body .excalidraw {
 
 .theme-light.minimal-light-contrast .theme-dark {
 	--tab-container-background:          var(--bg2);
+	--ribbon-background-collapsed:       var(--bg2);
 }
 
 .theme-light,
